--- a/index.html
+++ b/index.html
@@ -45,17 +45,16 @@
                         <li class="depth_item depth1_item has"><a class="depth_text depth1_text" href="#">회사소개</a>
                             <div class="depth depth2">
                                 <ul class="depth_list depth2_list">
-                                    <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="#">인사말</a></li>
-                                    <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="#">연혁</a></li>
-                                    <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="#">인증서</a></li>
-                                    <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="#">오시는 길</a></li>
+                                    <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="../about.html">인사말</a></li>
+                                    <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="../certi.html">인증서</a></li>
+                                    <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="../location.html">오시는 길</a></li>
                                 </ul>
                             </div>
                         </li>
                         <li class="depth_item depth1_item has"><a class="depth_text depth1_text" href="#">제품소개</a>
                             <div class="depth depth2">
                                 <ul class="depth_list depth2_list">
-                                    <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="#">하이쎈모터</a></li>
+                                    <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="../product_1.html">하이젠모터</a></li>
                                     <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="#">ABB</a></li>
                                     <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="#">윌로펌프</a></li>
                                     <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="#">그런포스펌프</a></li>
@@ -326,8 +325,7 @@
             </div>
             <p class="copyright">ⓒ 2024 HISSEN. All Rights Reserved</p>
         </div>
-    </div>
-</footer>
+    </footer>
     <!-- //footer -->
     <script src="js/waypoints.js"></script>
     <script src="js/main.js"></script>
