--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
     <!-- header -->
     <header id="header">
         <div class="wrap">
-            <h1 class="logo_box"><a href="/" class="logo">주식회사 하이쎈</a></h1>
+            <h1 class="logo_box"><a href="/" class="logo">에이치비에스주식회사</a></h1>
             <button type="button" class="menu_open">메뉴열기</button>
             <div class="gnb_curtain"></div>
             <!-- 전체 상단 메뉴 -->
             <div class="gnb">
                 <div class="gnb_top">
-                    <h2 class="logo_box"><a href="/" class="logo">주식회사 하이쎈</a></h2>
+                    <h2 class="logo_box"><a href="/" class="logo">에이치비에스주식회사</a></h2>
                     <button type="button" class="menu_close">메뉴닫기</button>
                 </div>
                 <div class="depth depth1">
@@ -88,7 +88,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="header_copyright">Copyright © HISSEN Corporation.<br>All Rights Reserved.</div>
+                <div class="header_copyright">Copyright © HBS Corporation.<br>All Rights Reserved.</div>
             </div>
             <!-- //전체 상단 메뉴 -->
         </div>
@@ -105,7 +105,7 @@
                         <span class="change">ALL FOR ONE, ONE FOR ALL</span>
                         <span class="change">Professionalism & Passion</span>
                     </div>
-                    <div class="slogan">산업 통합 시스템 선도기업, 하이쎈</div>
+                    <div class="slogan">산업 통합 시스템 선도기업, 에치비에스</div>
                 </div>
                 <ul class="slide_paging">
                     <li class="active on">
@@ -155,7 +155,7 @@
         <!-- Cooperative Brand -->
         <div class="sec02">
             <div class="brand_slogan waypoint on">Cooperative Brand</div>
-            <div class="brand_text waypoint on">하이쎈과 함께하는 브랜드<br>그 이상의 가치를 연결하고자 합니다.</div>
+            <div class="brand_text waypoint on">에치비에스과 함께하는 브랜드<br>그 이상의 가치를 연결하고자 합니다.</div>
             <div class="mask_text type1 waypoint on">
                 <span class="zoom_circle zoom_circle1 on"></span>
                 <span class="zoom_circle zoom_circle2"></span>
@@ -211,7 +211,7 @@
             <div class="main_inner">
                 <div class="youtube_box waypoint">
                     <div class="flexbox">
-                        <div class="media_nm"><span>HISSEN</span><br />PRODUCT</div>
+                        <div class="media_nm"><span>HBS</span><br />PRODUCT</div>
                         <a href="/media/youtube" class="go_media">상품 더보기</a>
                     </div>
                     <div class="youtube_conbox">
@@ -255,7 +255,7 @@
                     <div class="top_bx">
                         <div class="main_tit aos-init aos-animate" data-aos="fade-right" data-aos-duration="600" data-aos-anchor-placement="center-bottom">
                             <span>NEWS</span>
-                            <strong>하이쎈의<br>최신 소식을 전해드립니다.</strong>
+                            <strong>에치비에스의<br>최신 소식을 전해드립니다.</strong>
                         </div>
                         <div class="main_btn aos-init aos-animate" data-aos="fade-left" data-aos-duration="600">
                             <a href="./notice.html" class="black"><span>View more</span></a>
@@ -639,8 +639,8 @@
         <div class="sec05 waypoint on">
             <div class="bg"></div>
             <a href="#">
-                <div class="title">하이쎈<br> 쇼핑몰</div>
-                <div class="link"><span>HISSEN SHOP</span></div>
+                <div class="title">에치비에스<br> 쇼핑몰</div>
+                <div class="link"><span>HBS SHOP</span></div>
             </a>
         </div>
         <!-- //shop -->
@@ -677,15 +677,15 @@
             </div>
             <div class="corp_info">
                 <span>대표이사 : 손정수</span>
-                <span>사업자등록번호 : 182-86-00679</span>
-                <span>주소 : 부산광역시 사상구 새벽로 210(괘법동) 하이쎈(주)</span>
+                <span>사업자등록번호 : 705-87-01099</span>
+                <span>주소 : 부산광역시 사상구 괘감로 37, 1동 119호, 120호, 121호(괘법동, 산업유품유통상가)</span>
             </div>
             <div class="corp_info">
-                <span>대표번호 : 051-328-3118</span>
-                <span>FAX : 051-327-3118</span>
-                <span>이메일 : hissen@hissenmotor.com</span>
+                <span>대표번호 : 051-319-3111</span>
+                <span>FAX : 051-319-3113</span>
+                <span>이메일 : hbs@hbsolution.kr</span>
             </div>
-            <p class="copyright">ⓒ 2024 HISSEN. All Rights Reserved</p>
+            <p class="copyright">ⓒ 2024 HBS. All Rights Reserved</p>
         </div>
     </footer>
     <!-- //footer -->
