--- a/inc/footer.html
+++ b/inc/footer.html
@@ -28,45 +28,45 @@
     <title>주식회사 하이쎈</title>
 </head>
 <body data-top="no-top">
-<footer id="footer">
-    <div class="wrap">
-        <div class="footer_top">
-            <div class="footer_logo">
-                <img src="images/f_logo.png" alt="유한건강생활">
+    <footer id="footer">
+        <div class="wrap">
+            <div class="footer_top">
+                <div class="footer_logo">
+                    <img src="images/f_logo.png" alt="">
+                </div>
+                <div class="dropdown_box">
+                    <div class="family_site link_list">
+                        <button type="button" class="link_open" title="열기">FAMILY SITE</button>
+                        <ul>
+                            <li><a href="#" target="blank" title="새창">뉴오리진</a></li>
+                            <li><a href="#" target="blank" title="새창">유한양행</a></li>
+                            <li><a href="#" target="blank" title="새창">유한킴벌리</a></li>
+                            <li><a href="#" target="blank" title="새창">주식회사 유한화학</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <div class="dropdown_box">
-                <div class="family_site link_list">
-                    <button type="button" class="link_open" title="열기">FAMILY SITE <img src="../images/arrow-down-s-line.png"></button>
+            <div class="footer_bot">
+                <div class="linkbox">
                     <ul>
-                        <li><a href="#" target="blank" title="새창">뉴오리진</a></li>
-                        <li><a href="#" target="blank" title="새창">유한양행</a></li>
-                        <li><a href="#" target="blank" title="새창">유한킴벌리</a></li>
-                        <li><a href="#" target="blank" title="새창">주식회사 유한화학</a></li>
+                        <li><a href="#" target="_blank">사업자정보확인</a></li>
+                        <li><a href="policy.html">개인정보처리방침</a></li>
+                        <li><a href="email.html">이메일무단수집거부</a></li>
+                        <li><a href="contactus.html">문의하기</a></li>
                     </ul>
                 </div>
             </div>
-        </div>
-        <div class="footer_bot">
-            <div class="linkbox">
-                <ul>
-                    <li><a href="#" target="_blank">사업자정보확인</a></li>
-                    <li><a href="../policy.html">개인정보처리방침</a></li>
-                    <li><a href="../email.html">이메일무단수집거부</a></li>
-                    <li><a href="../contactus.html">문의하기</a></li>
-                </ul>
+            <div class="corp_info">
+                <span>대표이사 : 손정수</span>
+                <span>사업자등록번호 : 705-87-01099</span>
+                <span>주소 : 부산광역시 사상구 괘감로 37, 1동 119호, 120호, 121호(괘법동, 산업유품유통상가)</span>
             </div>
+            <div class="corp_info">
+                <span>대표번호 : 051-319-3111</span>
+                <span>FAX : 051-319-3113</span>
+                <span>이메일 : hbs@hbsolution.kr</span>
+            </div>
+            <p class="copyright">ⓒ 2024 HBS. All Rights Reserved</p>
         </div>
-        <div class="corp_info">
-            <span>대표이사 : 손정수</span>
-            <span>사업자등록번호 : 182-86-00679</span>
-            <span>주소 : 부산광역시 사상구 새벽로 210(괘법동) 하이쎈(주)</span>
-        </div>
-        <div class="corp_info">
-            <span>대표번호 : 051-328-3118</span>
-            <span>FAX : 051-327-3118</span>
-            <span>이메일 : hissen@hissenmotor.com</span>
-        </div>
-        <p class="copyright">ⓒ 2024 HISSEN. All Rights Reserved</p>
-    </div>
-</footer>
+    </footer>
 </body>
