--- a/inc/top-menu.html
+++ b/inc/top-menu.html
@@ -31,13 +31,13 @@
     <!-- header -->
     <header id="header">
         <div class="wrap">
-            <h1 class="logo_box"><a href="/" class="logo">주식회사 하이쎈</a></h1>
+            <h1 class="logo_box"><a href="/" class="logo">에이치비에스주식회사</a></h1>
             <button type="button" class="menu_open">메뉴열기</button>
             <div class="gnb_curtain"></div>
             <!-- 전체 상단 메뉴 -->
             <div class="gnb">
                 <div class="gnb_top">
-                    <h2 class="logo_box"><a href="/" class="logo">주식회사 하이쎈</a></h2>
+                    <h2 class="logo_box"><a href="/" class="logo">에이치비에스주식회사</a></h2>
                     <button type="button" class="menu_close">메뉴닫기</button>
                 </div>
                 <div class="depth depth1">
@@ -55,25 +55,25 @@
                             <div class="depth depth2">
                                 <ul class="depth_list depth2_list">
                                     <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="../product_1.html">하이젠모터</a></li>
-                                    <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="../product_2.html">ABB</a></li>
-                                    <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="../product_3.html">윌로펌프</a></li>
-                                    <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="../product_4.html">그런포스펌프</a></li>
-                                    <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="../product_5.html">데스미펌프</a></li>
+                                    <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="#">ABB</a></li>
+                                    <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="#">윌로펌프</a></li>
+                                    <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="#">그런포스펌프</a></li>
+                                    <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="#">데스미펌프</a></li>
                                 </ul>
                             </div>
                         </li>
                         <li class="depth_item depth1_item has"><a class="depth_text depth1_text" href="#">견적문의</a>
                             <div class="depth depth2">
                                 <ul class="depth_list depth2_list">
-                                    <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="../contactus.html">견적문의</a></li>
+                                    <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="#">견적문의</a></li>
                                 </ul>
                             </div>
                         </li>
                         <li class="depth_item depth1_item has"><a class="depth_text depth1_text" href="#">고객지원</a>
                             <div class="depth depth2">
                                 <ul class="depth_list depth2_list">
-                                    <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="../notice.html">공지사항</a></li>
-                                    <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="../data.html">자료실</a></li>
+                                    <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="#">공지사항</a></li>
+                                    <li class="depth_item depth2_item"><a class="depth_text depth2_text" href="#">자료실</a></li>
                                 </ul>
                             </div>
                         </li>
@@ -86,7 +86,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="header_copyright">Copyright © HISSEN Corporation.<br>All Rights Reserved.</div>
+                <div class="header_copyright">Copyright © HBS Corporation.<br>All Rights Reserved.</div>
             </div>
             <!-- //전체 상단 메뉴 -->
         </div>
