--- a/certi.html
+++ b/certi.html
@@ -25,7 +25,7 @@
     <script src="/js/swiper.min.js"></script>
     <script src="/js/slick1.8.1.min.js"></script>
     <script src="/js/common.js"></script>
-    <title>주식회사 하이쎈</title>
+    <title>에치비에스주식회사</title>
 </head>
 <body data-top="no-top">
     <!-- header -->
@@ -124,7 +124,7 @@
                                             <td data-content="등록일자 : ">2022.09.14</td>
                                         </tr>
                                         <tr>
-                                            <td data-content="특허내용 : ">하이쎈(주) 선박용 조타장치 발명 특허증</td>
+                                            <td data-content="특허내용 : ">에치비에스(주) 선박용 조타장치 발명 특허증</td>
                                             <td data-content="인증명 : ">선박용 조타 장치</td>
                                             <td data-content="출원일자 : ">2020.01.08</td>
                                             <td data-content="등록일자 : ">2022.09.14</td>
