--- a/inc/footer.html
+++ b/inc/footer.html
@@ -25,7 +25,7 @@
     <script src="/js/swiper.min.js"></script>
     <script src="/js/slick1.8.1.min.js"></script>
     <script src="/js/common.js"></script>
-    <title>주식회사 하이쎈</title>
+    <title>에치비에스주식회사</title>
 </head>
 <body data-top="no-top">
     <footer id="footer">
