--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     <script src="/js/swiper.min.js"></script>
     <script src="/js/slick1.8.1.min.js"></script>
     <script src="/js/common.js"></script>
-    <title>주식회사 하이쎈</title>
+    <title>에치비에스주식회사</title>
 </head>
 <body data-top="no-top">
     <!-- header -->
@@ -62,10 +62,10 @@
             <div class="tab_match">
                 <div class="matchbox matchbox3 active">
                     <div class="inner_wrap">
-                        <div class="speech">산업 관련 토탈 시스템을 갖추어 <span>기업가 정신을 바탕으로</span><br>고객 만족을 실천하는 기업, 하이쎈</div>
+                        <div class="speech">산업 관련 토탈 시스템을 갖추어 <span>기업가 정신을 바탕으로</span><br>고객 만족을 실천하는 기업, 에치비에스</div>
                         <div class="ceo_left">
                             <div class="text">
-                                저희 하이쎈 주식회사는 1988년 창립 이래 모터, 감속기, 팬, 인버터 및 자동제어시스템 제조까지 산업 관련 토탈 시스템을
+                                저희 에치비에스 주식회사는 1988년 창립 이래 모터, 감속기, 팬, 인버터 및 자동제어시스템 제조까지 산업 관련 토탈 시스템을
                                 갖추어 고객 만족을 실천하고 있습니다.<br><br>
                                 산업토탈 시스템과 더불어 독자적인 물류 시스템 구축으로 다양하고 충분한 제품을 확보 하였으며 빠른 납기와
                                 저렴한 가격으로 고객님의 요구를 충족시켜 드리겠습니다.<br><br>
@@ -73,10 +73,10 @@
                         </div>
                         <div class="ceo_right">
                             <div class="text">
-                                또한 전 직원이 ALL FOR ONE, ONE FOR ALL이라는 기본 원칙 아래 고객과 하이쎈은 하나임을 명심하고
-                                고객 만족을 실천하기 위해 더욱 노력하여 고객과 함께 WIN-WIN하는 하이쎈이 되겠습니다.<br><br>
-                                하이쎈은 사회적 책임을 다하고 여러 이해관계자와 공감하며 정직하고 올바른 방향으로 기업의 역할을 수행하기 위한 정도경영을 추구합니다.
-                                임직원 모두가 의미 있는 역할을 다할 것을 약속드립니다. 하루하루 새롭게 성장하는 하이쎈의 모습을 기대해 주시기 바랍니다.
+                                또한 전 직원이 ALL FOR ONE, ONE FOR ALL이라는 기본 원칙 아래 고객과 에치비에스은 하나임을 명심하고
+                                고객 만족을 실천하기 위해 더욱 노력하여 고객과 함께 WIN-WIN하는 에치비에스이 되겠습니다.<br><br>
+                                에치비에스은 사회적 책임을 다하고 여러 이해관계자와 공감하며 정직하고 올바른 방향으로 기업의 역할을 수행하기 위한 정도경영을 추구합니다.
+                                임직원 모두가 의미 있는 역할을 다할 것을 약속드립니다. 하루하루 새롭게 성장하는 에치비에스의 모습을 기대해 주시기 바랍니다.
                             </div>
                         </div>
                         <div class="ceo_box">
@@ -85,17 +85,17 @@
                     </div>
     
                     <div class="inner_wrap_m">
-                        <div class="speech">산업 관련 토탈 시스템을 갖추어 <span>기업가 정신을 바탕으로</span> <br>고객 만족을 실천하는 기업, 하이쎈</div>
+                        <div class="speech">산업 관련 토탈 시스템을 갖추어 <span>기업가 정신을 바탕으로</span> <br>고객 만족을 실천하는 기업, 에치비에스</div>
                         <div class="text">
-                            저희 하이쎈 주식회사는 1988년 창립 이래 모터, 감속기, 팬, 인버터 및 자동제어시스템 제조까지 산업 관련 토탈 시스템을
+                            저희 에치비에스 주식회사는 1988년 창립 이래 모터, 감속기, 팬, 인버터 및 자동제어시스템 제조까지 산업 관련 토탈 시스템을
                             갖추어 고객 만족을 실천하고 있습니다.<br><br>
                             산업토탈 시스템과 더불어 독자적인 물류 시스템 구축으로 다양하고 충분한 제품을 확보 하였으며 빠른 납기와
                             저렴한 가격으로 고객님의 요구를 충족시켜 드리겠습니다.<br><br>
 
-                            또한 전 직원이 ALL FOR ONE, ONE FOR ALL이라는 기본 원칙 아래 고객과 하이쎈은 하나임을 명심하고
-                            고객 만족을 실천하기 위해 더욱 노력하여 고객과 함께 WIN-WIN하는 하이쎈이 되겠습니다.<br><br>
-                            하이쎈은 사회적 책임을 다하고 여러 이해관계자와 공감하며 정직하고 올바른 방향으로 기업의 역할을 수행하기 위한 정도경영을 추구합니다.
-                            임직원 모두가 의미 있는 역할을 다할 것을 약속드립니다. 하루하루 새롭게 성장하는 하이쎈의 모습을 기대해 주시기 바랍니다.
+                            또한 전 직원이 ALL FOR ONE, ONE FOR ALL이라는 기본 원칙 아래 고객과 에치비에스은 하나임을 명심하고
+                            고객 만족을 실천하기 위해 더욱 노력하여 고객과 함께 WIN-WIN하는 에치비에스이 되겠습니다.<br><br>
+                            에치비에스은 사회적 책임을 다하고 여러 이해관계자와 공감하며 정직하고 올바른 방향으로 기업의 역할을 수행하기 위한 정도경영을 추구합니다.
+                            임직원 모두가 의미 있는 역할을 다할 것을 약속드립니다. 하루하루 새롭게 성장하는 에치비에스의 모습을 기대해 주시기 바랍니다.
                         </div>
     
                         <div class="ceo_box">
@@ -118,7 +118,7 @@
                     </div>
                     <div class="full_img">
                         <div class="subject">Vision</div>
-                        <div class="img_text">토탈 시스템<br>산업 통합 시스템 선도기업, 하이쎈</div>
+                        <div class="img_text">토탈 시스템<br>산업 통합 시스템 선도기업, 에치비에스</div>
                     </div>
                     <div class="conbox">
                         <div class="circlebox">
