--- a/contactus.html
+++ b/contactus.html
@@ -25,7 +25,7 @@
     <script src="/js/swiper.min.js"></script>
     <script src="/js/slick1.8.1.min.js"></script>
     <script src="/js/common.js"></script>
-    <title>주식회사 하이쎈</title>
+    <title>에치비에스주식회사</title>
 </head>
 <body data-top="no-top">
     <!-- header -->
@@ -108,7 +108,7 @@
                                     <button type="button" class="pop_close">닫기</button>
                                     <div class="privacy_box">
                                         <div class="first_context">
-                                            <p>(주)하이쎈(이하 “회사”)은 이용자의 개인정보보호를 매우 중요시하며,이용자가 회사의 서비스를 이용함과 동시에 회사에 제공한 개인정보가 보호 받을 수 있도록 최선을 다하고 있습니다.</p>
+                                            <p>(주)에치비에스(이하 “회사”)은 이용자의 개인정보보호를 매우 중요시하며,이용자가 회사의 서비스를 이용함과 동시에 회사에 제공한 개인정보가 보호 받을 수 있도록 최선을 다하고 있습니다.</p>
                                             <p>이에 회사는 정보통신망 이용촉진 및 정보보호 등에 관한 법률, 개인정보보호법 등 개인정보보호 관련 법령을 준수하고 있습니다.</p>
                                             <p>회사는 개인정보 처리방침을 통하여 이용자들이 제공하는 개인정보가 어떠한 용도와 방식으로 이용되고 있으며 개인정보보호를 위해 어떠한 조치가 취해지고 있는지 알려 드립니다.</p>
                                             <p>회사의 개인정보 처리방침은 개인정보보호 관련 법령, 지침 고시의 변경이나 회사의 내부 방침 변경 등으로 인하여 수시로 변경될 수 있고, 이에 따른 개인정보 처리방침의 지속적인 개선을 위하여 필요한 절차를 정하고 있습니다. 회사는 개인정보 처리방침을 개정하는 경우 “유한건강생활” 홈페이지를 통해 고지합니다. 이용자들께서는 홈페이지 방문 시 수시로 확인하시기 바랍니다.</p>
@@ -127,9 +127,9 @@
                                         </div>
                                         <div class="context">
                                             <div class="text">제 2조 개인정보의 수집항목 및 이용목적</div>
-                                            <p>귀하는 별도의 회원가입 절차 없이 ’하이쎈’이 제공하는 홈페이지 대부분의 컨텐츠에 자유롭게 접근할 수 있습니다. 단, 채용문의, 인재풀 등록, 기업협력에 관한 사항을 등록 시에는 개인정보 수집항목 및 이용목적에 관한 사항을 확인 및 동의를 해주셔야지만 등록이 가능합니다.</p>
+                                            <p>귀하는 별도의 회원가입 절차 없이 ’에치비에스’이 제공하는 홈페이지 대부분의 컨텐츠에 자유롭게 접근할 수 있습니다. 단, 채용문의, 인재풀 등록, 기업협력에 관한 사항을 등록 시에는 개인정보 수집항목 및 이용목적에 관한 사항을 확인 및 동의를 해주셔야지만 등록이 가능합니다.</p>
                                             <ul>
-                                                <li>개인정보 수집 및 보유자 : ㈜하이쎈</li>
+                                                <li>개인정보 수집 및 보유자 : ㈜에치비에스</li>
                                                 <li>채용문의 수집하는 개인정보 항목 및 이용목적(표) 입니다. 이 표는 수집항목, 이용목적으로 구성되어 있습니다.
                                                     <div class="table_box">
                                                         <table class="table">
