--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script src="/js/common.js"></script>
     <script src="/js/aos.js"></script>
 
-    <title>주식회사 하이쎈</title>
+    <title>에치비에스주식회사</title>
 </head>
 <body data-top="no-top">
     <!-- header -->
