--- a/location.html
+++ b/location.html
@@ -25,7 +25,7 @@
     <script src="/js/swiper.min.js"></script>
     <script src="/js/slick1.8.1.min.js"></script>
     <script src="/js/common.js"></script>
-    <title>주식회사 하이쎈</title>
+    <title>에치비에스주식회사</title>
 </head>
 <body data-top="no-top">
     <!-- header -->
@@ -53,11 +53,11 @@
             </div>
             <div class="inner_wrap">
                 <div class="conbox">
-                    <div class="location_nm">유한건강생활 서울 본사</div>
+                    <div class="location_nm">에치비에스 본사</div>
                     <dl class="location_info">
                         <div class="dl_line">
                             <dt>A.</dt>
-                            <dd>부산광역시 사상구 새벽로 210(괘법동) 하이쎈(주)<br>34F Parc 1 Tower2, 108 Yeoui-daero, Yeongdeungpo-gu, Seoul Korea</dd>
+                            <dd>부산광역시 사상구 새벽로 210(괘법동) 에치비에스(주)<br>34F Parc 1 Tower2, 108 Yeoui-daero, Yeongdeungpo-gu, Seoul Korea</dd>
                         </div>
                         <div class="dl_line">
                             <dt>T.</dt>
@@ -65,7 +65,7 @@
                         </div>
                         <div class="dl_line">
                             <dt>E.</dt>
-                            <dd>hissen@hissenmotor.com</dd>
+                            <dd>hbs@hbsolution.kr</dd>
                         </div>
                     </dl>
                     <div class="map">
