--- a/product_3.html
+++ b/product_3.html
@@ -129,7 +129,7 @@
                                 <img src="./images/f_logo.png" alt="뉴오리진">
                             </div>
                             <div class="b_slogan">세상의 변화를 이해하고 기술의 혁신을 통해<br>미래에 도전하는 기업</div>
-                            <div class="b_text">산업 통합 시스템 선도기업, 하이쎈</div>
+                            <div class="b_text">산업 통합 시스템 선도기업, 에치비에스</div>
                         </div>
                     </div>
                     <div class="thumb_box">
