--- a/location.html
+++ b/location.html
@@ -69,7 +69,7 @@
                         </div>
                     </dl>
                     <div class="map">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3261.8749241766864!2d128.98190077635147!3d35.15973995844388!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3568c1ded1cb7d1d%3A0xc60d72b565450a8d!2z7ZWY7J207I6IKOyjvCk!5e0!3m2!1sko!2skr!4v1730962894719!5m2!1sko!2skr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3261.8723697959085!2d128.97694137635142!3d35.159803658440346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3568c1dcfddfba5f%3A0x7e2f06802463097d!2z7JeQ7J207LmY67mE7JeQ7IqkKOyjvCk!5e0!3m2!1sko!2skr!4v1732152333901!5m2!1sko!2skr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
             </div>
